packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__example_noop_dev_mode.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
assertion_line: 3813
expression: output
---
==INPUT==


import { component$, useStore, serverStuff$, $ } from '@qwik.dev/core';

export const App = component$(() => {
	const stuff = useStore();
	serverStuff$(async () => {
		// should be removed but keep scope
		console.log(stuff.count)
	})
	serverStuff$(async () => {
		// should be removed
	})

	return (
		<Cmp>
			<p class="stuff"
				shouldRemove$={() => stuff.count}
				onClick$={() => console.log('warn')}
			>
				Hello Qwik
			</p>
		</Cmp>
	);
});

============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { qrlDEV } from "@qwik.dev/core";
//
const q_App_component_ckEPmXZlub0 = /*#__PURE__*/ qrlDEV(()=>import("./test.tsx_App_component_ckEPmXZlub0"), "App_component_ckEPmXZlub0", {
    file: "/hello/from/dev/test.tsx",
    lo: 105,
    hi: 452,
    displayName: "test.tsx_App_component"
});
//
export const App = /*#__PURE__*/ componentQrl(q_App_component_ckEPmXZlub0);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;;;;;;AAGA,OAAO,MAAM,oBAAM,0CAoBhB\"}")
============================= test.tsx_App_component_ckEPmXZlub0.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
import { _noopQrlDEV } from "@qwik.dev/core";
import { serverStuffQrl } from "@qwik.dev/core";
import { useStore } from "@qwik.dev/core";
//
const q_qrl_4294901760 = /*#__PURE__*/ _noopQrlDEV("App_component_serverStuff_ebyHaP15ytQ", {
    file: "/hello/from/dev/test.tsx",
    lo: 0,
    hi: 0,
    displayName: "test.tsx_App_component_serverStuff"
});
const q_qrl_4294901762 = /*#__PURE__*/ _noopQrlDEV("App_component_serverStuff_1_PQCqO0ANabY", {
    file: "/hello/from/dev/test.tsx",
    lo: 0,
    hi: 0,
    displayName: "test.tsx_App_component_serverStuff_1"
});
const q_qrl_4294901764 = /*#__PURE__*/ _noopQrlDEV("App_component_Cmp_p_shouldRemove_uU0MG0jvQD4", {
    file: "/hello/from/dev/test.tsx",
    lo: 0,
    hi: 0,
    displayName: "test.tsx_App_component_Cmp_p_shouldRemove"
});
const q_qrl_4294901766 = /*#__PURE__*/ _noopQrlDEV("App_component_Cmp_p_q_e_click_Yl4ybrJWrt4", {
    file: "/hello/from/dev/test.tsx",
    lo: 0,
    hi: 0,
    displayName: "test.tsx_App_component_Cmp_p_q_e_click"
});
//
export const App_component_ckEPmXZlub0 = ()=>{
    const stuff = useStore();
    serverStuffQrl(q_qrl_4294901760.w([
        stuff
    ]));
    serverStuffQrl(q_qrl_4294901762);
    return /*#__PURE__*/ _jsxSorted(Cmp, null, null, /*#__PURE__*/ _jsxSorted("p", {
        "q:p": stuff
    }, {
        class: "stuff",
        shouldRemove$: q_qrl_4294901764,
        "q-e:click": q_qrl_4294901766
    }, "Hello Qwik", 7, null, {
        fileName: "/hello/from/dev/test.tsx",
        lineNumber: 16,
        columnNumber: 4
    }), 1, "u6_0", {
        fileName: "/hello/from/dev/test.tsx",
        lineNumber: 15,
        columnNumber: 3
    });
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;;;;;;;;;;;;;;;;;;;;;;;;;;yCAG8B;IAC7B,MAAM,QAAQ;IACd;;;IAIA;IAIA,qBACC,WAAC,+BACA,WAAC;;;QAAE,OAAM;QACR,aAAa;QACb,WAAQ;OACR;;;;;;;;;AAKJ\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_component_ckEPmXZlub0",
  "entry": null,
  "displayName": "test.tsx_App_component",
  "hash": "ckEPmXZlub0",
  "canonicalFilename": "test.tsx_App_component_ckEPmXZlub0",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    105,
    452
  ]
}
*/
== DIAGNOSTICS ==

[]
