packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__example_of_synchronous_qrl.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
assertion_line: 3592
expression: output
---
==INPUT==


		import { sync$, component$ } from "@qwik.dev/core";

		export default component$(() => {
		return (
			<>
				<input onClick$={sync$(function(event, target) {
					// comment should be removed
					event.preventDefault();
				})}/>
				<input onClick$={sync$((event, target) => {
					event.preventDefault();
				})}/>
				<input onClick$={sync$((event, target) => event.preventDefault())}/>
			</>
		);
		});
		
============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
//
const q_test_component_LUXeXe0DQrg = /*#__PURE__*/ qrl(()=>import("./test.tsx_test_component_LUXeXe0DQrg"), "test_component_LUXeXe0DQrg");
//
export default /*#__PURE__*/ componentQrl(q_test_component_LUXeXe0DQrg);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;AAGE,6BAAe,2CAaZ\"}")
============================= test.tsx_test_component_LUXeXe0DQrg.js (ENTRY POINT)==

import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
import { _jsxSorted } from "@qwik.dev/core";
import { _qrlSync } from "@qwik.dev/core";
//
export const test_component_LUXeXe0DQrg = ()=>{
    return /*#__PURE__*/ _jsxSorted(_Fragment, null, null, [
        /*#__PURE__*/ _jsxSorted("input", {
            "q-e:click": _qrlSync(function(event, target) {
                // comment should be removed
                event.preventDefault();
            }, "function(event,target){event.preventDefault();}")
        }, null, null, 2, null),
        /*#__PURE__*/ _jsxSorted("input", {
            "q-e:click": _qrlSync((event, target)=>{
                event.preventDefault();
            }, "(event,target)=>{event.preventDefault();}")
        }, null, null, 2, null),
        /*#__PURE__*/ _jsxSorted("input", {
            "q-e:click": _qrlSync((event, target)=>event.preventDefault(), "(event,target)=>event.preventDefault()")
        }, null, null, 2, null)
    ], 1, "u6_0");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;0CAG4B;IAC1B,qBACC;sBACC,WAAC;YAAM,WAAQ,WAAQ,SAAS,KAAK,EAAE,MAAM;gBAC5C,4BAA4B;gBAC5B,MAAM,cAAc;YACrB;;sBACA,WAAC;YAAM,WAAQ,WAAQ,CAAC,OAAO;gBAC9B,MAAM,cAAc;YACrB;;sBACA,WAAC;YAAM,WAAQ,WAAQ,CAAC,OAAO,SAAW,MAAM,cAAc;;;AAGhE\"}")
/*
{
  "origin": "test.tsx",
  "name": "test_component_LUXeXe0DQrg",
  "entry": null,
  "displayName": "test.tsx_test_component",
  "hash": "LUXeXe0DQrg",
  "canonicalFilename": "test.tsx_test_component_LUXeXe0DQrg",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    85,
    411
  ]
}
*/
== DIAGNOSTICS ==

[]
