packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__example_optimization_issue_3561.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
assertion_line: 707
expression: output
---
==INPUT==


import { component$ } from '@qwik.dev/core';

export const Issue3561 = component$(() => {
	const props = useStore({
		product: {
		currentVariant: {
			variantImage: 'image',
			variantNumber: 'number',
			setContents: 'contents',
		},
		},
	});
	const {
		currentVariant: { variantImage, variantNumber, setContents } = {},
	} = props.product;

	console.log(variantImage, variantNumber, setContents)

	return <p></p>;
	});

============================= test.jsx ==

import { componentQrl } from "@qwik.dev/core";
import { _noopQrl } from "@qwik.dev/core";
//
const q_Issue3561_component_hHTw654BZB8 = /*#__PURE__*/ _noopQrl("Issue3561_component_hHTw654BZB8");
//
q_Issue3561_component_hHTw654BZB8.s(()=>{
    const props = useStore({
        product: {
            currentVariant: {
                variantImage: 'image',
                variantNumber: 'number',
                setContents: 'contents'
            }
        }
    });
    const { currentVariant: { variantImage, variantNumber, setContents } = {} } = props.product;
    console.log(variantImage, variantNumber, setContents);
    return <p></p>;
});
export const Issue3561 = /*#__PURE__*/ componentQrl(q_Issue3561_component_hHTw654BZB8);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;oCAGoC;IACnC,MAAM,QAAQ,SAAS;QACtB,SAAS;YACT,gBAAgB;gBACf,cAAc;gBACd,eAAe;gBACf,aAAa;YACd;QACA;IACD;IACA,MAAM,EACL,gBAAgB,EAAE,YAAY,EAAE,aAAa,EAAE,WAAW,EAAE,GAAG,CAAC,CAAC,EACjE,GAAG,MAAM,OAAO;IAEjB,QAAQ,GAAG,CAAC,cAAc,eAAe;IAEzC,QAAQ,IAAI;AACZ;AAjBD,OAAO,MAAM,0BAAY,gDAiBrB\"}")
== DIAGNOSTICS ==

[]
