packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__example_optimization_issue_3795.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
assertion_line: 797
expression: output
---
==INPUT==


import { component$ } from '@qwik.dev/core';

export const Issue3795 = component$(() => {
	let base = "foo";
	const firstAssignment = base;
	base += "bar";
	const secondAssignment = base;
	return (
		<div id='issue-3795-result'>{firstAssignment} {secondAssignment}</div>
	)
	});

============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { inlinedQrl } from "@qwik.dev/core";
const Issue3795_component_wsE8beycatI = ()=>{
    let base = "foo";
    const firstAssignment = base;
    base += "bar";
    const secondAssignment = base;
    return /*#__PURE__*/ _jsxSorted("div", null, {
        id: "issue-3795-result"
    }, [
        firstAssignment,
        " ",
        secondAssignment
    ], 1, "u6_0");
};
export const Issue3795 = /*#__PURE__*/ componentQrl(/*#__PURE__*/ inlinedQrl(Issue3795_component_wsE8beycatI, "Issue3795_component_wsE8beycatI"));


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;wCAGoC;IACnC,IAAI,OAAO;IACX,MAAM,kBAAkB;IACxB,QAAQ;IACR,MAAM,mBAAmB;IACzB,qBACC,WAAC;QAAI,IAAG;;QAAqB;QAAgB;QAAE;;AAEhD;AARD,OAAO,MAAM,0BAAY,2GAQrB\"}")
== DIAGNOSTICS ==

[]
