packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__example_preserve_filenames_segments.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
assertion_line: 2706
expression: output
---
==INPUT==


import { component$, useStore } from '@qwik.dev/core';

export const App = component$((props: Stuff) => {
	foo();
	return (
		<Cmp>
			<p class="stuff" onClick$={() => console.log('warn')}>Hello Qwik</p>
		</Cmp>
	);
});

export const foo = () => console.log('foo');

============================= test.tsx ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
//
const _qrl_App_component_ckEPmXZlub0 = /*#__PURE__*/ qrl(()=>import("./test.tsx_App_component_ckEPmXZlub0.js"), "App_component_ckEPmXZlub0");
//
export const App = /*#__PURE__*/ componentQrl(_qrl_App_component_ckEPmXZlub0);
export const foo = ()=>console.log('foo');


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;AAGA,OAAO,MAAM,oBAAM,6CAOhB;AAEH,OAAO,MAAM,MAAM,IAAM,QAAQ,GAAG,CAAC,OAAO\"}")
============================= test.tsx_App_component_ckEPmXZlub0.js (ENTRY POINT)==

import { foo } from "./test.tsx";
import { _jsxSorted } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
//
const _qrl_App_component_Cmp_p_q_e_click_Yl4ybrJWrt4 = /*#__PURE__*/ qrl(()=>import("./test.tsx_App_component_Cmp_p_q_e_click_Yl4ybrJWrt4.js"), "App_component_Cmp_p_q_e_click_Yl4ybrJWrt4");
//
export const App_component_ckEPmXZlub0 = (props)=>{
    foo();
    return /*#__PURE__*/ _jsxSorted(Cmp, null, null, /*#__PURE__*/ _jsxSorted("p", null, {
        class: "stuff",
        "q-e:click": _qrl_App_component_Cmp_p_q_e_click_Yl4ybrJWrt4
    }, "Hello Qwik", 3, null), 3, "u6_0");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;;yCAG8B,CAAC;IAC9B;IACA,qBACC,WAAC,+BACA,WAAC;QAAE,OAAM;QAAQ,WAAQ;OAA6B;AAGzD\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_component_ckEPmXZlub0",
  "entry": null,
  "displayName": "test.tsx_App_component",
  "hash": "ckEPmXZlub0",
  "canonicalFilename": "test.tsx_App_component_ckEPmXZlub0",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    88,
    220
  ],
  "paramNames": [
    "props"
  ]
}
*/
============================= test.tsx_App_component_Cmp_p_q_e_click_Yl4ybrJWrt4.js (ENTRY POINT)==

export const App_component_Cmp_p_q_e_click_Yl4ybrJWrt4 = ()=>console.log('warn');


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"yDAO8B,IAAM,QAAQ,GAAG,CAAC\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_component_Cmp_p_q_e_click_Yl4ybrJWrt4",
  "entry": null,
  "displayName": "test.tsx_App_component_Cmp_p_q_e_click",
  "hash": "Yl4ybrJWrt4",
  "canonicalFilename": "test.tsx_App_component_Cmp_p_q_e_click_Yl4ybrJWrt4",
  "path": "",
  "extension": "js",
  "parent": "App_component_ckEPmXZlub0",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    164,
    189
  ]
}
*/
== DIAGNOSTICS ==

[]
